AB2CAS+/AB2CAS+_flexbison_sec/AB2CAS+_sec_y.output
Grammar

    0 $accept: program $end

    1 program: protocol declarations knowledge actions goals end

    2 protocol: PROTOCOL ID

    3 $@1: /* empty */

    4 declarations: DECLARATIONS $@1 declarations_list

    5 declarations_list: /* empty */
    6                  | declarations_list declarations_entry

    7 declarations_entry: ID ID

    8 $@2: /* empty */

    9 knowledge: KNOWLEDGE $@2 knowledge_list

   10 knowledge_list: /* empty */
   11               | knowledge_list knowledge_entry

   12 knowledge_entry: ID ID

   13 $@3: /* empty */

   14 actions: ACTIONS $@3 actions_list

   15 actions_list: /* empty */
   16             | actions_list action_entry

   17 action_entry: ID ID ID ID ID

   18 $@4: /* empty */

   19 goals: GOALS $@4 goals_list

   20 goals_list: /* empty */
   21           | goals_list goal_entry

   22 goal_entry: ID ID ID ID ID

   23 end: END


Terminals, with rules where they appear

$end (0) 0
error (256)
PROTOCOL (258) 2
DECLARATIONS (259) 4
KNOWLEDGE (260) 9
ACTIONS (261) 14
GOALS (262) 19
END (263) 23
ID (264) 2 7 12 17 22


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
program (11)
    on left: 1, on right: 0
protocol (12)
    on left: 2, on right: 1
declarations (13)
    on left: 4, on right: 1
$@1 (14)
    on left: 3, on right: 4
declarations_list (15)
    on left: 5 6, on right: 4 6
declarations_entry (16)
    on left: 7, on right: 6
knowledge (17)
    on left: 9, on right: 1
$@2 (18)
    on left: 8, on right: 9
knowledge_list (19)
    on left: 10 11, on right: 9 11
knowledge_entry (20)
    on left: 12, on right: 11
actions (21)
    on left: 14, on right: 1
$@3 (22)
    on left: 13, on right: 14
actions_list (23)
    on left: 15 16, on right: 14 16
action_entry (24)
    on left: 17, on right: 16
goals (25)
    on left: 19, on right: 1
$@4 (26)
    on left: 18, on right: 19
goals_list (27)
    on left: 20 21, on right: 19 21
goal_entry (28)
    on left: 22, on right: 21
end (29)
    on left: 23, on right: 1


state 0

    0 $accept: . program $end

    PROTOCOL  shift, and go to state 1

    program   go to state 2
    protocol  go to state 3


state 1

    2 protocol: PROTOCOL . ID

    ID  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: protocol . declarations knowledge actions goals end

    DECLARATIONS  shift, and go to state 6

    declarations  go to state 7


state 4

    2 protocol: PROTOCOL ID .

    $default  reduce using rule 2 (protocol)


state 5

    0 $accept: program $end .

    $default  accept


state 6

    4 declarations: DECLARATIONS . $@1 declarations_list

    $default  reduce using rule 3 ($@1)

    $@1  go to state 8


state 7

    1 program: protocol declarations . knowledge actions goals end

    KNOWLEDGE  shift, and go to state 9

    knowledge  go to state 10


state 8

    4 declarations: DECLARATIONS $@1 . declarations_list

    $default  reduce using rule 5 (declarations_list)

    declarations_list  go to state 11


state 9

    9 knowledge: KNOWLEDGE . $@2 knowledge_list

    $default  reduce using rule 8 ($@2)

    $@2  go to state 12


state 10

    1 program: protocol declarations knowledge . actions goals end

    ACTIONS  shift, and go to state 13

    actions  go to state 14


state 11

    4 declarations: DECLARATIONS $@1 declarations_list .
    6 declarations_list: declarations_list . declarations_entry

    ID  shift, and go to state 15

    $default  reduce using rule 4 (declarations)

    declarations_entry  go to state 16


state 12

    9 knowledge: KNOWLEDGE $@2 . knowledge_list

    $default  reduce using rule 10 (knowledge_list)

    knowledge_list  go to state 17


state 13

   14 actions: ACTIONS . $@3 actions_list

    $default  reduce using rule 13 ($@3)

    $@3  go to state 18


state 14

    1 program: protocol declarations knowledge actions . goals end

    GOALS  shift, and go to state 19

    goals  go to state 20


state 15

    7 declarations_entry: ID . ID

    ID  shift, and go to state 21


state 16

    6 declarations_list: declarations_list declarations_entry .

    $default  reduce using rule 6 (declarations_list)


state 17

    9 knowledge: KNOWLEDGE $@2 knowledge_list .
   11 knowledge_list: knowledge_list . knowledge_entry

    ID  shift, and go to state 22

    $default  reduce using rule 9 (knowledge)

    knowledge_entry  go to state 23


state 18

   14 actions: ACTIONS $@3 . actions_list

    $default  reduce using rule 15 (actions_list)

    actions_list  go to state 24


state 19

   19 goals: GOALS . $@4 goals_list

    $default  reduce using rule 18 ($@4)

    $@4  go to state 25


state 20

    1 program: protocol declarations knowledge actions goals . end

    END  shift, and go to state 26

    end  go to state 27


state 21

    7 declarations_entry: ID ID .

    $default  reduce using rule 7 (declarations_entry)


state 22

   12 knowledge_entry: ID . ID

    ID  shift, and go to state 28


state 23

   11 knowledge_list: knowledge_list knowledge_entry .

    $default  reduce using rule 11 (knowledge_list)


state 24

   14 actions: ACTIONS $@3 actions_list .
   16 actions_list: actions_list . action_entry

    ID  shift, and go to state 29

    $default  reduce using rule 14 (actions)

    action_entry  go to state 30


state 25

   19 goals: GOALS $@4 . goals_list

    $default  reduce using rule 20 (goals_list)

    goals_list  go to state 31


state 26

   23 end: END .

    $default  reduce using rule 23 (end)


state 27

    1 program: protocol declarations knowledge actions goals end .

    $default  reduce using rule 1 (program)


state 28

   12 knowledge_entry: ID ID .

    $default  reduce using rule 12 (knowledge_entry)


state 29

   17 action_entry: ID . ID ID ID ID

    ID  shift, and go to state 32


state 30

   16 actions_list: actions_list action_entry .

    $default  reduce using rule 16 (actions_list)


state 31

   19 goals: GOALS $@4 goals_list .
   21 goals_list: goals_list . goal_entry

    ID  shift, and go to state 33

    $default  reduce using rule 19 (goals)

    goal_entry  go to state 34


state 32

   17 action_entry: ID ID . ID ID ID

    ID  shift, and go to state 35


state 33

   22 goal_entry: ID . ID ID ID ID

    ID  shift, and go to state 36


state 34

   21 goals_list: goals_list goal_entry .

    $default  reduce using rule 21 (goals_list)


state 35

   17 action_entry: ID ID ID . ID ID

    ID  shift, and go to state 37


state 36

   22 goal_entry: ID ID . ID ID ID

    ID  shift, and go to state 38


state 37

   17 action_entry: ID ID ID ID . ID

    ID  shift, and go to state 39


state 38

   22 goal_entry: ID ID ID . ID ID

    ID  shift, and go to state 40


state 39

   17 action_entry: ID ID ID ID ID .

    $default  reduce using rule 17 (action_entry)


state 40

   22 goal_entry: ID ID ID ID . ID

    ID  shift, and go to state 41


state 41

   22 goal_entry: ID ID ID ID ID .

    $default  reduce using rule 22 (goal_entry)
